# pakv

./: .gitignore  README.md  tp.panote
pakv_1/: Cargo.toml  readme.md  rec.md
pakv_1/src/: main.rs  pakv.rs
pakv_2/: Cargo.toml  readme.md  rec.md
pakv_2/src/: cmd.rs  file.rs  input.rs  main.rs  pakv.rs
pakv_2/src/file/: compact.rs  meta.rs  mod.rs
pakv_2/store/: 1.kv
pakv_3/: readme.md  rec.md
pakv_3/pakv_client/src/: client.rs
pakv_3/pakv_server/: Cargo.toml
pakv_3/pakv_server/src/: main.rs  server.rs
pakv_3/pakv_server/src/pakv/: channel_caller.rs  mod.rs
pakv_3/pakv_server/src/pakv/file/: compact.rs  meta.rs  mod.rs
pakv_4/: readme.md
pakv_4/paco/: Cargo.toml
pakv_4/paco/src/: lib.rs  threadpool.rs  worker.rs
pakv_4/pakv_client/benchlib/: Cargo.toml
pakv_4/pakv_client/benchlib/benches/: pakvclientbench.rs
pakv_4/pakv_client/src/: client.rs  input.rs  main.rs
pakv_4/pakv_server/: Cargo.toml
pakv_4/pakv_server/src/: lib.rs  main.rs  server.rs
pakv_4/pakv_server/src/pakv/file/: compact.rs  mod.rs  serial.rs
pakv_5/: readme.md
pakv_5/pakv_client_/: Cargo.toml
pakv_5/pakv_client_/src/: chan.rs  conn.rs  input.rs  lib.rs  main.rs  msg_gen.rs  msg_parse.rs
pakv_5/pakv_server/: Cargo.toml
pakv_5/pakv_server/benches/: serverside_bench.rs
pakv_5/pakv_server/src/: client2server.rs  conccurent_bench.rs  lib.rs  main.rs  msg2client.rs  msg2server.rs  msg_gen.rs  msg_parse.rs  server2client.rs  server_app.rs  server_app_consume.rs  server_listen.rs  server_mainloop.rs  server_rw_eachclient.rs
pakv_5/pakv_server/src/net/: mod.rs  msg2app_sender.rs  msg_gen.rs  msg_match.rs  msg_parse.rs  server_listen.rs  server_rw_eachclient.rs
pakv_5/pakv_server/src/pakv/: channel_caller.rs  mod.rs
pakv_5/pakv_server/src/pakv/file/: compact.rs  fileio.rs  mod.rs  serial.rs  wrworker.rs
pakv_5/pakv_server/store/: 1.kv  meta
pakv_kernel/: Cargo.toml
pakv_kernel/benches/: kernel_bench.rs
pakv_kernel/default/: comp
pakv_kernel/src/: compress.rs  file.rs  lib.rs  main.rs  meta.rs  serial.rs  test.rs
pakv_kernel/src/file/: mod.rs
