[package]
name = "pakv_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="3.2.15", features = ["derive"]  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.8.4"
tokio = { version = "1.20.1", features = ["full"] }
byteorder = "1.3.2"
parking_lot = "0.12.1"

[dev-dependencies]
clap = { version="3.2.15", features = ["derive"]  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.8.4"
criterion = "0.3"