[package]
name = "pakv_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pakv_client"
path = "src/lib.rs"

[dependencies]
clap = { version="3.2.15", features = ["derive"]  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
byteorder = "1.3.2"


[dev-dependencies]
criterion = "0.3"